frontend/test/should_fail/container_copy_constructor_004.grg
test t
{
	if {
		set<int>(set<double>{}).empty();
	}
}
